# Lyrical-Geniuses

./: .gitignore  README.md  pyproject.toml  testing.py
lyrics/: all_i_wanted.txt  candels.txt  cinderella_man_.txt  lose_yourself.txt  myth.txt  new_wayss.txt  no_love.txt  rap_god.txt  where_do_lovers_go.txt  winter.txt  youth.txt
project/: lyrics.py  project.py
songs/country/: backhome.txt  hurt.txt  raceison.txt
songs/pop/: boyfriend.txt  thriling.txt  unfaithful.txt  wreckingball.txt
songs/rap/: hotlinebling.txt  ilove.txt  loseyourself.txt  whenimgone.txt
songs/rock/: are_u_gna_be_my_girl.txt  foolagain.txt  redhot.txt  soundgarden.txt
