[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["samer <s.allaham@ltuc.com>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
gtts = "^2.1.1"
playsound = "^1.2.2"
pyglet = "^1.5.5"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
